--- a/index.html
+++ b/index.html
@@ -137,6 +137,26 @@
         70% { box-shadow: 0 0 0 10px rgba(236, 72, 153, 0); }
         100% { box-shadow: 0 0 0 0 rgba(236, 72, 153, 0); }
       }
+      @keyframes throb-animation {
+        0% { transform: scale(1); box-shadow: 0 0 5px rgba(236, 72, 153, 0.5); }
+        50% { transform: scale(1.02); box-shadow: 0 0 15px 5px rgba(236, 72, 153, 0.8); }
+        100% { transform: scale(1); box-shadow: 0 0 5px rgba(236, 72, 153, 0.5); }
+      }
+      .animate-throb {
+        animation: throb-animation 1.2s infinite ease-in-out;
+      }
+      @keyframes heartbeat-pulse {
+        0% { transform: scale(1); }
+        10% { transform: scale(1.1); }
+        20% { transform: scale(1); }
+        60% { transform: scale(1); }
+        70% { transform: scale(1.1); }
+        80% { transform: scale(1); }
+        100% { transform: scale(1); }
+      }
+      .animate-heartbeat-pulse {
+        animation: heartbeat-pulse 1.2s infinite;
+      }
       .joyce-glow {
         box-shadow: 0 0 15px 5px rgba(236, 72, 153, 0.6), 0 0 25px 10px rgba(236, 72, 153, 0.4);
         border-color: rgba(236, 72, 153, 0.7);
